# tmp-play

./: CHANGELOG.md  tmp-play.cabal
app/: Main.hs  Part1.hs
auto/: ghcid
src/: Part1.hs  Part2.hs
