cabal-version:      3.4
name:               tmp-play
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alistair Burrowes
maintainer:         alistair.burrowes@gmail.com
build-type:          Simple

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   src
    other-modules: Part1

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-language: Haskell2010
    build-depends:
        base ^>=4.15.0.0,
        ghcid >= 0.8.7 && < 0.9
